[metadata]
name = jupyter-ui-poll
version = 0.1.1

description = Block jupyter cell execution while interacting with widgets
long_description = file: README.rst
long_description_content_type = text/x-rst
home-page = https://github.com/kirill888/jupyter-ui-poll
author = Kirill Kouzoubov
author-email = kirill888@gmail.com
keywords = jupyter, ipywidgets
license = MIT License
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.5
packages = jupyter_ui_poll
test_suite = tests
setup_requires =
    setuptools
install_requires =
    ipython
tests_require =
    pytest


[options.extras_require]
dev =
  wheel
  jupyter


[bdist_wheel]
universal = true


[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/