[metadata]
name = jupyter-ui-poll
version = attr: jupyter_ui_poll._version.__version__

description = Block jupyter cell execution while interacting with widgets
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any
license = MIT License
url = https://github.com/kirill888/jupyter-ui-poll
author = Kirill Kouzoubov
author_email = kirill888@gmail.com
keywords = jupyter, ipywidgets
project_urls =
   Documentation = https://jupyter-ui-poll.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/kirill888/jupyter-ui-poll/issues

classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = jupyter_ui_poll
test_suite = tests
setup_requires =
    setuptools
install_requires =
    ipython


[options.extras_require]
dev =
  wheel
  jupyter

docs =
  sphinx
  sphinx-autodoc-typehints
  sphinx-rtd-theme


[bdist_wheel]
universal = true


[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
python_version = 3.8
ignore_missing_imports = True
allow_redefinition = True